objects/TIMBASURVEYS__QuestionToField__c.object
<CustomObject>
    <fields>
        <fullName>TIMBASURVEYS__FieldLabel__c</fullName>
        <label>FieldLabel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__FieldLength__c</fullName>
        <label>FieldLength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__FieldType__c</fullName>
        <label>FieldType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__QuestionId__c</fullName>
        <label>QuestionId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>QuestionToFields</relationshipLabel>
        <relationshipName>QuestionToFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>QuestionToField</label>
    <nameField>
        <label>QuestionToField Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuestionToFields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>